--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <div class="card-body">
               <h5 class="card-title">School Management System</h5>
               <p class="card-text">Is a web based system which helps schools to centralize their activities and manage students information.</p>
+              <a href="https://github.com/EngShija/E-SMS-OOP">Vist on github</a>
             </div>
           </div>
         </div>
@@ -135,6 +136,7 @@
             <div class="card-body">
               <h5 class="card-title">Calculator</h5>
               <p class="card-text">A calculator app which is able to perform some simple mathematics calculations</p>
+              <a href="https://mycalculatorappl.netlify.app/">Vist</a>
             </div>
           </div>
         </div>
