Uploaded profile image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">ENG SHIJA</a>
+        <img src="images/profile.jpg" class="rounded-circle" height="60" width="60" alt="">
+        <a class="navbar-brand" style="margin-left: 6px;" href="#">ENG SHIJA</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -59,13 +60,13 @@
     <header class="hero text-center">
       <div class="container">
         <h1 class="display-4">Hi, I'm NKINDA SHIJA SITTA</h1>
-        <p class="lead">
+        <!-- <p class="lead">
           I specialize in
           <strong
             >Web/Mobile Design & Development, Graphics Designing, Computer
             security issues And Tech Consulting!</strong
           >
-        </p>
+        </p> -->
       </div>
     </header>
 
